# sl

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  sl.c
debian/: README.Debian  README.source  changelog  control  python3-sl.postinst.debhelper  python3-sl.prerm.debhelper  rules
steam_locomotive/: __main__.py  cli.py  graphics.py  options.py  train.py
tests/: test_graphics.py  test_train.py
