[metadata]
name = sl
version = 6.0
description = "SL (Steam Locomotive) runs across your terminal when you type "sl" as you meant to type "ls"."
long_description = file: README.md

url = "https://github.com/Alphadelta14/sl"
maintainer = "Alphadelta14"
maintainer_email = "alpha@alphaservcomputing.solutions"

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
    Pillow

[options.package_data]
* = *.txt, *.gif

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    sl = steam_locomotive.cli:main
